# devops_console

./: .gitignore  Dockerfile.agent  Dockerfile.master  LICENSE  Makefile  README.md  go.mod  go.sum  wails.json
backend/: .env-example  data.json  main.py  models.py  pyproject.toml  worker_config.json
backend/src/application/: config_manager.py  job_service.py  task_service.py  tenant_service.py  worker_service.py  workspace_service.py  workspace_tenant_service.py
backend/src/domain/: task.py  task_repository.py  tenant_repository.py  workspace_repository.py  workspace_tenant.py  workspace_tenant_repository.py
backend/src/domain/job/: job.py  job_repository.py
backend/src/domain/task/: task.py
backend/src/domain/tenant/: tenant.py  tenant_repository.py
backend/src/domain/worker/: worker.py  worker_config.py  worker_repository.py
backend/src/domain/workspace/: workspace.py  workspace_repository.py
backend/src/infrastructure/: in_memory_task_repository.py  in_memory_workspace_tenant_repository.py
backend/src/infrastructure/config/: app_config.py
backend/src/infrastructure/logging/: colored_formatter.py
backend/src/infrastructure/repositories/: in_memory_job_repository.py  in_memory_task_repository.py  in_memory_tenant_repository.py  in_memory_worker_repository.py  in_memory_workspace_repository.py
backend/src/infrastructure/routes/: job_routes.py  task_routes.py  tenant_routes.py  worker_routes.py  workspace_routes.py
backend/src/infrastructure/utils/: environment.py  logger.py
backend/src/infrastructure/workers/: abstractions.py  worker_config.py  (+5 more)
(+111 files in other folders)
