[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ruben Dario Cabrera Garcia <rubentxu74@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
fastapi-cors = "^0.0.6"
loguru = "^0.7.2"
colorama = "^0.4.6"
websockets = "^13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
